# AADC2017

Python_ExtIf_Server/: ExtIf.thrift  ExtIf_Server.py  demo.py  start.sh  tf_demo.py
Python_ExtIf_Server/Google/: log.txt  setup.py  test_script.sh
Python_ExtIf_Server/Google/object_detection/: PIL.Image  Tutorial.py  create_pascal_tf_record.py  eval.py  export_inference_graph.py  hashlib  io  logging  object_detection_tutorial.ipynb  tf  train.py  trainer.py
include/: ADTF_OpenCV_helper.h  ManeuverList.h  PropertyHelper.h  aadc_classification_enums.h  aadc_classification_structs.h  aadc_enums.h  aadc_geometrics.h  aadc_juryEnums.h  aadc_myclassification_structs.h  aadc_roadSign_enums.h  aadc_structs.h  juryEnums.h
src/: Readme.txt
src/aadcBase/: CMakeLists.txt  Readme.txt  Readme_before_change_anything.txt
src/aadcBase/arduino/: CMakeLists.txt  Readme.txt
src/aadcBase/arduino/AADC_ArduinoCommunication/: CMakeLists.txt  Logger.h  SerialDeviceBoost.cpp  SerialDeviceBoost.h  SimpleTimer.h  arduino_com_client.cpp  arduino_com_client.h  arduino_com_helpers.h  arduino_protocol.h  cArduinoCommunication.cpp  cArduinoCommunication.h  stdafx.h
src/aadcBase/jury/: CMakeLists.txt  Readme.txt
src/aadcBase/jury/old_AADC_JuryModule_ConnectionLib/: CMakeLists.txt  cJuryModule.cpp  cJuryModule.h  coder_description.h  jury_module.ui  main.cpp  stdafx.h
src/aadcBase/watchdog/: CMakeLists.txt  Readme.txt
src/aadcBase/watchdog/AADC_WatchdogTrigger/: CMakeLists.txt  cWatchdogTrigger.cpp  cWatchdogTrigger.h
src/aadcDemo/: CMakeLists.txt
src/aadcDemo/algorithms/: CMakeLists.txt  Readme.txt
src/aadcDemo/algorithms/AADC_ControllerPID/: CMakeLists.txt  cControllerPID.cpp  cControllerPID.h  stdafx.h
src/aadcDemo/algorithms/AADC_LaneDetection/: CMakeLists.txt  cLaneDetection.cpp  cLaneDetection.h  stdafx.h
src/aadcDemo/algorithms/AADC_LaneTracking/: AADC_LaneTracking.cpp  AADC_LaneTracking.h  CMakeLists.txt
src/aadcDemo/algorithms/AADC_LaneTrackingExt/: AADC_LaneTrackingExt.cpp  AADC_LaneTrackingExt.h  CMakeLists.txt  stdafx.h
src/aadcDemo/algorithms/AADC_SteeringController/: CMakeLists.txt  cSteeringController.cpp  cSteeringController.h  stdafx.h
src/aadcDemo/algorithms/AADC_WheelSpeedController/: cWheelSpeedController.cpp  cWheelSpeedController.h
src/aadcDemo/camera/: CMakeLists.txt
src/aadcDemo/camera/AADC_Basler/: CMakeLists.txt  cBaslerCamera.cpp  cBaslerCamera.h  stdafx.h
src/aadcDemo/camera/AADC_CameraCalibration/: CMakeLists.txt  cCameraCalibration.cpp  cCameraCalibration.h  calibrationSettings.h  displaywidget.cpp  displaywidget.h  stdafx.h
src/aadcDemo/camera/AADC_FisheyeUndistortion/: stdafx.h  (+3 more)
src/aadcDemo/camera/AADC_Realsense/: CMakeLists.txt  Realsensehelper.h  cRealsenseCamera.cpp  cRealsenseCamera.h  stdafx.h
src/aadcDemo/datafilter/: CMakeLists.txt  Readme.txt
src/aadcDemo/helper/: CMakeLists.txt  Readme.txt
src/aadcDemo/helper/AADC_BoolValueGenerator/: CMakeLists.txt  cBoolValueGenerator.cpp  cBoolValueGenerator.h  displaywidget.cpp  displaywidget.h
src/aadcDemo/helper/AADC_CarController/: CMakeLists.txt  cCarController.cpp  cCarController.h  calibrationfunction.cpp  calibrationfunction.h  stdafx.h  widget.cpp  widget.h
src/aadcDemo/helper/AADC_CarController/ui/: ui_widget.ui
src/aadcDemo/helper/AADC_ClassificationViewer/: CMakeLists.txt  cClassificationViewer.cpp  cClassificationViewer.h  displaywidget.cpp  displaywidget.h  stdafx.h
src/aadcDemo/helper/AADC_ExtPythonServer/: CMakeLists.txt  ExtPythonServer.cpp  ExtPythonServer.h  stdafx.h
src/aadcDemo/helper/AADC_SensorAnalyzer/: CMakeLists.txt  cSensorAnalyzer.cpp  cSensorAnalyzer.h  displaywidget.cpp  displaywidget.h  stdafx.h
src/aadcDemo/helper/AADC_SensorVisualization/: CMakeLists.txt  FrameCounter.cpp  FrameCounter.h  cSensorVisualization.cpp  cSensorVisualization.h  stdafx.h  uswidget.cpp  uswidget.h  widget.cpp  widget.h
src/aadcDemo/helper/AADC_SensorVisualization/ui/: ui_widget.ui
src/aadcDemo/helper/AADC_SignalValueGenerator/: CMakeLists.txt  cSignalValueGenerator.cpp  cSignalValueGenerator.h  displaywidget.cpp  displaywidget.h  stdafx.h
src/aadcDemo/helper/AADC_StateController/: CMakeLists.txt  Maneuverlist.h  cStateController.cpp  cStateController.h  juryEnums.h  stdafx.h
src/aadcDemo/helper/AADC_Visualization/: CMakeLists.txt  cVisualization.cpp  cVisualization.h  displaywidget.cpp  displaywidget.h  stdafx.h
src/aadcDemo/jury/: CMakeLists.txt
src/aadcDemo/libraries/: CMakeLists.txt
src/aadcDemo/libraries/ThriftExtIf/: CMakeLists.txt  ExtIf.thrift  ExtIf_generate_thrift_cpp.bat  ExtIf_generate_thrift_python.bat
src/aadcDemo/libraries/ThriftExtIf/gen-ExtIf/: ExtIf_constants.cpp  ExtIf_constants.h  ExtIf_types.cpp  ExtIf_types.h  ExtService.cpp  ExtService.h  ExtService_server.skeleton.cpp
src/aadcDemo/libraries/ThriftExtIf/gen-ExtIf/ExtIf/: ExtService-remote  ExtService.py  __init__.py  ttypes.py
src/aadcDemo/markers/: CMakeLists.txt
src/aadcDemo/markers/AADC_MarkerGenerator/: CMakeLists.txt  create_marker.cpp  create_markers.bat
src/aadcDemo/position/: CMakeLists.txt
src/aadcDemo/position/AADC_MapVisualization/: CMakeLists.txt  cMapVisualization.cpp  cMapVisualization.h  displaywidget.cpp  displaywidget.h  stdafx.h
src/aadcUser/: CMakeLists.txt
src/aadcUser/AADC_EmergencyBreak/: CMakeLists.txt  cEmergencyBreak.cpp  cEmergencyBreak.h  stdafx.h
src/aadcUser/AADC_ImageAdapter/: CMakeLists.txt  cImageAdapter.cpp  cImageAdapter.h
src/aadcUser/AADC_OpenCVTemplate/: CMakeLists.txt  cOpenCVTemplate.cpp  cOpenCVTemplate.h  stdafx.h
src/aadcUser/AADC_SpeedGovernor/: CMakeLists.txt  cSpeedGovernor.cpp  cSpeedGovernor.h
src/aadcUser/AADC_StateMachine/: CMakeLists.txt  cStateMachine.cpp  cStateMachine.h  cStates_Enum.h
src/aadcUser/AADC_StateMachine_OLD/: cStateMachine.cpp  cStateMachine.h  cStates_Enum.h  stdafx.h
src/aadcUser/AADC_TemplateFilter/: CMakeLists.txt  cTemplateFilter.cpp  cTemplateFilter.h  stdafx.h  template_data.h
src/aadcUser/AADC_UltrasonicFilter/: CMakeLists.txt  cUltrasonicFilter.cpp  cUltrasonicFilter.h  stdafx.h
(+56 files in other folders)
