add_subdirectory(AADC_SensorVisualization)
add_subdirectory(AADC_CarController)
add_subdirectory(AADC_SensorAnalyzer)
add_subdirectory(AADC_BoolValueGenerator)
add_subdirectory(AADC_StateController)
add_subdirectory(AADC_SignalValueGenerator)
add_subdirectory(AADC_ExtPythonServer)
add_subdirectory(AADC_ClassificationViewer)
